# MagikaN

./: CMakeLists.txt  Makefile  README.md  main.c  main.h  menu.c  menu.h  menus.h  strings.h
